--- a/style.css
+++ b/style.css
@@ -190,10 +190,13 @@ header {
     
 }
 .footer{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: end;
     font-size: 13px;
-    margin-left: 30px;
+    margin: auto;
     margin-top: 90px;
-    
     
 }
 .linkedin {
